# pracc_gl

./: .gitignore  LICENSE  README.md  meson.build
include/: dual_number.h  utils.h
scripts/: meson_wrap_update.sh
src/mandelbrot/: main.cc
src/mandelbrot/shader/: julia.frag  mandelbrot.frag
src/newton_fractal/: main.cc
src/newton_fractal/shader/: newton_fractal.frag
